Code tidy - mostly generics